# drone

i2c-sensors/: CMakeLists.txt  bmp085.c  bmp085.h  common.h  error-utilities.c  error-utilities.h  i2c-sensors.c  i2c-sensors.h  i2c-utilities.h  l3gd20.c  l3gd20.h  lsm303dlhc-acc.c  lsm303dlhc-acc.h  lsm303dlhc-mag.c  lsm303dlhc-mag.h  main.c
misc/: .gitignore  Makefile  drone-00A0.dts  gps-pps-00A0.dts  i2c-test.c  init-drone  init-gps-ntp
xplane/: .gitignore  CMakeLists.txt  Makefile  drone-test.c  version-script
